force-app/main/default/objects/PBS_LOP_OFFER__c/PBS_LOP_OFFER__c.object-meta.xml
<CustomObject>
    <description>Generic (non AAAP) offers</description>
    <label>LOP Offer</label>
    <nameField>
        <displayFormat>LOP-Offer-{000000}</displayFormat>
        <label>LOP_OFFER Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LOP Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>