force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_AC_UTILITIES__c.field-meta.xml
<CustomField>
    <fullName>LOP_AC_UTILITIES__c</fullName>
    <label>AC Utilities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>