force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_ACCEPTED_LEASE_FORM_1364__c.field-meta.xml
<CustomField>
    <fullName>LOP_ACCEPTED_LEASE_FORM_1364__c</fullName>
    <label>Proposal to Lease Space (GSA Form 1364)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>