force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_ACCEPTED_PROV_FORM_3516__c.field-meta.xml
<CustomField>
    <fullName>LOP_ACCEPTED_PROV_FORM_3516__c</fullName>
    <label>Solicition Provisions (GSA Form 3516A)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>