force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_ACCEPTED_TERMS_AND_COND__c.field-meta.xml
<CustomField>
    <fullName>LOP_ACCEPTED_TERMS_AND_COND__c</fullName>
    <description>By submitting this offer, the Offeror agrees upon acceptance of this proposal by herein specified date, to lease to the United States of America, the premises described, upon the terms and conditions as specified herein, in full compliance with and acceptance of the aforementioned RLP, with attachments.</description>
    <label>RLP Terms &amp; Conditions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>