force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Accessibility_Standards_Met__c.field-meta.xml
<CustomField>
    <fullName>LOP_Accessibility_Standards_Met__c</fullName>
    <description>Per Section 2 of the RLP, Accessibility,  Does the property meet Lease accessibility standards?</description>
    <inlineHelpText>Per Section 2 of the RLP, Accessibility,  Does the property meet Lease accessibility standards?</inlineHelpText>
    <label>Accessibility Standards Met</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>