force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_ACK_READ_RLP_REQ_NO_CHANGE__c.field-meta.xml
<CustomField>
    <fullName>LOP_ACK_READ_RLP_REQ_NO_CHANGE__c</fullName>
    <label>Read RLP and Requesting No deviations</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>