force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Annual_TI_Rent__c.field-meta.xml
<CustomField>
    <fullName>LOP_Annual_TI_Rent__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Annual TI Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>