force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_ARCHITECTURAL_AND_ENG_FEES_UOM__c.field-meta.xml
<CustomField>
    <fullName>LOP_ARCHITECTURAL_AND_ENG_FEES_UOM__c</fullName>
    <description>Architecture &amp; Engineering fees Unit Of Measurement</description>
    <label>Arch / Engineering Fees Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1. Per ABOA Square Feet ($)</fullName>
            </value>
            <value>
                <fullName>2. Percent of Total Construction Costs (%)</fullName>
            </value>
            <value>
                <fullName>3. Flat Fee ($)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>