force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Architectural_Fees_Flat__c.field-meta.xml
<CustomField>
    <fullName>LOP_Architectural_Fees_Flat__c</fullName>
    <label>Architectural Fees Flat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>