force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Architectural_Fees_Percent__c.field-meta.xml
<CustomField>
    <fullName>LOP_Architectural_Fees_Percent__c</fullName>
    <label>Architectural Fees Percent</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>