force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Asbestos_Declaration__c.field-meta.xml
<CustomField>
    <fullName>LOP_Asbestos_Declaration__c</fullName>
    <description>Per Section 2 of the RLP, Asbestos, the property ___ Contains no Asbestos-Containing Materials (ACM), or contains ACM in a stable, solid matrix that is not damaged or submject to damage _____Contains ACM not ina stable, solid matrix</description>
    <label>Asbestos Declaration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contains no Asbestos-Containing Materials (ACM), or</fullName>
            </value>
            <value>
                <fullName>Contains ACM in a stable, solid matrix that is not damaged or subject to damage</fullName>
            </value>
            <value>
                <fullName>Contains ACM not in a stable, solid matrix</fullName>
            </value>
            <value>
                <fullName>Property contains ACM not in a stable, solid matrix</fullName>
            </value>
            <value>
                <fullName>Property contains no Asbestos-Containing Materials (ACM) or Property contains ACM in a stable, solid matrix that is not damaged or subject to damage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>