force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_BROKER_OWNER_REP_COMM__c.field-meta.xml
<CustomField>
    <fullName>LOP_BROKER_OWNER_REP_COMM__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Owner Representative Commission</description>
    <label>Owner Representative Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>