force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_BSAC_Amorti_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>LOP_BSAC_Amorti_Interest_Rate__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>BSAC Amortization Interest Rate</description>
    <inlineHelpText>BSAC Amortization Interest Rate</inlineHelpText>
    <label>BSAC Amorti Interest Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>