force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_BSAC_Annual_Rent_Per_ABOA__c.field-meta.xml
<CustomField>
    <fullName>LOP_BSAC_Annual_Rent_Per_ABOA__c</fullName>
    <description>BSAC Annual Rent: $ Per ABOA SF</description>
    <inlineHelpText>BSAC Annual Rent: $ Per ABOA SF</inlineHelpText>
    <label>BSAC Annual Rent: $ Per ABOA SF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>