force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_BSAC_Annual_Rent_Per_RSF__c.field-meta.xml
<CustomField>
    <fullName>LOP_BSAC_Annual_Rent_Per_RSF__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>BSAC Annual Rent: $ Per RSF</description>
    <inlineHelpText>BSAC Annual Rent: $ Per RSF</inlineHelpText>
    <label>BSAC Annual Rent: $ Per RSF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>