force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_BSAC_Years_Rate_Effective__c.field-meta.xml
<CustomField>
    <fullName>LOP_BSAC_Years_Rate_Effective__c</fullName>
    <description>Number of Years Rate is Effective</description>
    <inlineHelpText>Number of Years BSAC Rate is Effective</inlineHelpText>
    <label>Number of Years BSAC Rate is Effective</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>