force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Building_Name__c.field-meta.xml
<CustomField>
    <fullName>LOP_Building_Name__c</fullName>
    <description>Building Name: Entered by offeror through LOP</description>
    <label>1. Building Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>