force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_CERTIFICATION_DATE__c.field-meta.xml
<CustomField>
    <fullName>LOP_CERTIFICATION_DATE__c</fullName>
    <description>Date Energy Star Certified</description>
    <inlineHelpText>Date Energy Star Certified</inlineHelpText>
    <label>Date Energy Star Certified</label>
    <type>Date</type>
</CustomField>