force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_City__c.field-meta.xml
<CustomField>
    <fullName>LOP_City__c</fullName>
    <description>City</description>
    <label>3. City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>