force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Common_Area_Factor__c.field-meta.xml
<CustomField>
    <fullName>LOP_Common_Area_Factor__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Common Area Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>