force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Corp_Not_Convicted_Felon__c.field-meta.xml
<CustomField>
    <fullName>LOP_Corp_Not_Convicted_Felon__c</fullName>
    <label>Corporation Not Covicted Felon</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>