force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>LOP_DUNS_Number__c</fullName>
    <description>What is the property owner&apos;s DUNS #?</description>
    <label>DUNS Number</label>
    <length>11</length>
    <type>Text</type>
</CustomField>