force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_ELECTRICAL_MAINTENANCE__c.field-meta.xml
<CustomField>
    <fullName>LOP_ELECTRICAL_MAINTENANCE__c</fullName>
    <label>Electrical Maintenance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>