force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Emp_Visitor_Structured_Spaces__c.field-meta.xml
<CustomField>
    <fullName>LOP_Emp_Visitor_Structured_Spaces__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total Structured Parking Spaces Offered for Employees/Visior</description>
    <inlineHelpText>Total Structured Parking Spaces for the entire building under control of the offeror?</inlineHelpText>
    <label>Structured Spaces  Employee/Visitor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>