force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Fire_Safety_Declaration__c.field-meta.xml
<CustomField>
    <fullName>LOP_Fire_Safety_Declaration__c</fullName>
    <description>Does the property meet the Lease fire/life safety standards?</description>
    <inlineHelpText>Does the property meet the Lease fire/life safety standards?</inlineHelpText>
    <label>LOP Fire Safety Declaration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meets the Lease fire/life safety standards.</fullName>
            </value>
            <value>
                <fullName>Does not meet the Lease fire/life safety standards</fullName>
            </value>
            <value>
                <fullName>Does Not Meet</fullName>
                <isActive>false</isActive>
                <label>Does Not Meet</label>
            </value>
            <value>
                <fullName>Meets</fullName>
                <isActive>false</isActive>
                <label>Meets</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>