force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Flood_Plain_Declaration__c.field-meta.xml
<CustomField>
    <fullName>LOP_Flood_Plain_Declaration__c</fullName>
    <description>Per Section 2 of the RLP, Flood Plains, the property is not in a flood plain, in a base (100-year) flood plain, in a 500-year flood plain</description>
    <label>Flood Plain Declaration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not in a flood plain</fullName>
            </value>
            <value>
                <fullName>A base (100-year) flood plain</fullName>
            </value>
            <value>
                <fullName>A 500-year flood plain</fullName>
            </value>
            <value>
                <fullName>in a 500-year flood plain</fullName>
            </value>
            <value>
                <fullName>in a base (100-year) flood plain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>