force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Formula_Hist_Property__c.field-meta.xml
<CustomField>
    <fullName>LOP_Formula_Hist_Property__c</fullName>
    <formula>IF( OR(TEXT(LOP_HIST_PROP_IN_HIST_DIST__c)==&apos;Yes&apos;, TEXT(LOP_HIST_PROP_IN_NON_HIST_DIST__c)==&apos;Yes&apos; , TEXT(LOP_NON_HIST_PROP_IN_HIST_DIST__c)==&apos;Yes&apos; )  ,&apos;Yes&apos;,&apos;No&apos;)</formula>
    <label>Formula Hist Property</label>
    <type>Text</type>
</CustomField>