force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_GEN_PURPOSE_RENTABLE__c.field-meta.xml
<CustomField>
    <fullName>LOP_GEN_PURPOSE_RENTABLE__c</fullName>
    <description>Total amount of rentable square feet (RSF) in the building?</description>
    <label>Total amount of RSF in the building?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>