force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_GOV_Structured_Spaces__c.field-meta.xml
<CustomField>
    <fullName>LOP_GOV_Structured_Spaces__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total Structured Parking Spaces Offered for Government Vehicles</description>
    <inlineHelpText>Total Structured Parking Spaces for Government Vehicles</inlineHelpText>
    <label>Structured Spaces Gov. Vehicles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>