force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_GOV_Surface_Spaces__c.field-meta.xml
<CustomField>
    <fullName>LOP_GOV_Surface_Spaces__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total Surface Parking Spaces Offered for Gov. Vehicles</description>
    <label>Surface Spaces Gov. Vehicles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>