force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Government_Occupancy_Pct__c.field-meta.xml
<CustomField>
    <fullName>LOP_Government_Occupancy_Pct__c</fullName>
    <formula>IF(LOP_GEN_PURPOSE_RENTABLE__c &gt; 0, LOP_Office_RSF_OFFERED__c/LOP_GEN_PURPOSE_RENTABLE__c, 0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Government Occupancy pct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>