force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_HEATING_FUEL__c.field-meta.xml
<CustomField>
    <fullName>LOP_HEATING_FUEL__c</fullName>
    <label>Heating Fuel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>----</fullName>
                <default>true</default>
                <label>----</label>
            </value>
            <value>
                <fullName>Oil</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Coal</fullName>
            </value>
            <value>
                <fullName>Electric</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>