force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_HIST_PROP_IN_NON_HIST_DIST__c.field-meta.xml
<CustomField>
    <fullName>LOP_HIST_PROP_IN_NON_HIST_DIST__c</fullName>
    <description>Is the property offered a historic property outside of a historic district?</description>
    <label>Historic Proprty Outside Historic Dist</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>