force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Historic_Property_Tier__c.field-meta.xml
<CustomField>
    <fullName>LOP_Historic_Property_Tier__c</fullName>
    <description>Historic Property Tier</description>
    <inlineHelpText>Historic Property Tier</inlineHelpText>
    <label>Historic Property Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Historic property within a historic district</fullName>
            </value>
            <value>
                <fullName>Non-historic property or underdeveloped site within a historic district</fullName>
            </value>
            <value>
                <fullName>Historic properties outside of historic district</fullName>
            </value>
            <value>
                <fullName>Non-historic property</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>